Use Less mixins to prevent duplication of dark mode variables

--- a/less/api.less
+++ b/less/api.less
@@ -3,8 +3,8 @@
 }
 
 :root {
-  --entry-name-color: #40a977;
-  --argument-color: #666;
+  --entry-name-color: var(--link-color);
+  --argument-color: var(--font-color-subtle);
 }
 
 .section-name {
