--- a/less/hovercard.less
+++ b/less/hovercard.less
@@ -18,7 +18,7 @@
     padding: 15px 20px;
     border-radius: 5px;
     box-sizing: border-box;
-    box-shadow: 0px 5px 10px var(--hovercard-box-shadow);
+    box-shadow: 0px 5px 10px 0 var(--hovercard-box-shadow);
     overflow: hidden;
 
     h3 {
